testsuite/tests/parser/should_compile/T10582.hs
{-# LANGUAGE Arrows #-}

module T10582 where

(|:) :: Int -> Int -> Int
(|:) = (+)
