testsuite/tests/parser/should_fail/cmdFail003.hs
{-# LANGUAGE Arrows #-}
module CmdFail003 where

f = proc x -> [_ -< _,
               _ -< _,
               _ -< _,
               _ -< _,
               _ -< _]
